letter-spacing fix

--- a/css/wud.css
+++ b/css/wud.css
@@ -94,7 +94,7 @@
   height: 48px; }
 #info .logo {
   font-size: 25px;
-  letter-spacing: 2px !important;
+  letter-spacing: .2px !important;
   font-weight: bold;
   color: white;
   top: 0px; }
@@ -119,7 +119,7 @@
     font-size: 25px;
     background-image: none;
     margin: 5px 0 0 0;
-    letter-spacing: 2px !important; }
+    letter-spacing: .2px !important; }
     @media (min-width: 768px) {
       #info .logo h1 {
         font-size: 35px; } }
